client said crct

--- a/bangkok.html
+++ b/bangkok.html
@@ -214,16 +214,36 @@
 							Street Indian Hotel With Pool & Spa</p>
 						<p class="text-justify"><b class="text-white">Day 4 & Day 5 - Bangkok Stay : </b>City Hotel Near
 							Nana Plaza Sex Mall & Red Light Area</p>
+						<p class="text-white mt30">Room Tour Video<br>
+							<a href="https://youtu.be/I_bXSfI1KsE" target="_blank">Watch Video:
+								https://youtu.be/I_bXSfI1KsE</a>
+						</p>
+						<p class="text-white">Harish - Night life Tours Intro<br>
+							<a href="https://youtube.com/shorts/s6_ZiDBM-wg?si=HSAUSZrHzhlapYer" target="_blank"
+								class="mt60">Watch Video:
+								https://youtube.com/shorts/s6_ZiDBM-wg?si=HSAUSZrHzhlapYer</a>
+						</p>
 					</div>
 				</div>
 				<div class="col-lg-6">
 					<h5>Sightseeing in Pattaya & Bangkok:</h5>
-					<p class="text-justify"><b class="text-white">Day 1: </b>Bkk Transfer Tiger Topia with Crocodile Show Break fast Morning Check in
+					<p class="text-justify"><b class="text-white">Day 1: </b>Bkk Transfer Tiger Topia with Crocodile
+						Show Break fast Morning Check in
 						Hotel.</p>
 					<p><b class="text-white">Day 2: </b> Coral Island with Lunch ( 9am to 14hrs )</p>
-					<p><b class="text-white">Day 3: </b> Pattaya City & Temple Tour | Free Drop to Honey Soap - Massage ( Pay & Use)</p>
+					<p><b class="text-white">Day 3: </b> Pattaya City & Temple Tour | Free Drop to Honey Soap - Massage
+						( Pay & Use)</p>
 					<p><b class="text-white">Day 4: </b> Check out Pattaya Drop to Bangkok Hotel Stay,</p>
 					<p><b class="text-white">Day 5: </b> Airport Drop.</p>
+					<p class="text-white mt40">Night life Girls & Cost<br>
+						<a href="https://youtu.be/iDQ0bnyBNrA" target="_blank">Watch Video:
+							https://youtu.be/iDQ0bnyBNrA</a>
+					</p>
+					<p class="text-white">Harish - Personal Trip<br>
+						<a href="https://youtube.com/shorts/YfwGD_gyXhU?si=7j4-_dqDrSzv707X" target="_blank"
+							class="mt60">Watch Video:
+							https://youtube.com/shorts/YfwGD_gyXhU?si=7j4-_dqDrSzv707X</a>
+					</p>
 				</div>
 			</div>
 		</div>
@@ -267,7 +287,7 @@
 						<a class="navbar-brand  f-white-logo" href="#"> <img src="images/logo/icms.png"
 								alt="Logo" /></a> -->
 						<h2>Night Life Tours</h2>
-						<p>Since 2019, we have been curating the best nightlife experiences across Goa, Thailand, and
+						<p>Since 2014, we have been curating the best nightlife experiences across Goa, Thailand, and
 							Malaysia. From lively pubs and energetic discotheques to charming cafes and rejuvenating
 							massages, we bring you unforgettable moments. Book your night adventure with us and explore
 							the ultimate party destinations!</p>
@@ -280,8 +300,8 @@
 								<span><i class="fas fa-envelope"></i></span>
 								<p>Email <span> <a href="mailto:nightlifetourschennai@gmail.com"
 											target="_blank">nightlifetourschennai@gmail.com</a>|
-											<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
-											</a></span>
+										<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+										</a></span>
 								</p>
 							</li>
 							<li>
@@ -338,7 +358,9 @@
 			</div>
 		</div>
 	</div>
-
+	<a href="https://wa.me/+919600063175" class="fab-whatsapp" target="_blank">
+		<img src="images/icons/whatsapp.svg" alt="WhatsApp icon" />
+	</a>
 
 	<script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 	<script src="js/vendor/modernizr-3.5.0.min.js"></script>
