--- a/gallery_video.html
+++ b/gallery_video.html
@@ -274,7 +274,7 @@
 						<a class="navbar-brand  f-white-logo" href="#"> <img src="images/logo/icms.png"
 								alt="Logo" /></a> -->
 						<h2>Night Life Tours</h2>
-						<p>Since 2019, we have been curating the best nightlife experiences across Goa, Thailand, and
+						<p>Since 2014, we have been curating the best nightlife experiences across Goa, Thailand, and
 							Malaysia. From lively pubs and energetic discotheques to charming cafes and rejuvenating
 							massages, we bring you unforgettable moments. Book your night adventure with us and explore
 							the ultimate party destinations!</p>
@@ -345,7 +345,9 @@
 			</div>
 		</div>
 	</div>
-
+	<a href="https://wa.me/+919600063175" class="fab-whatsapp" target="_blank">
+		<img src="images/icons/whatsapp.svg" alt="WhatsApp icon" />
+	</a>
 
 	<script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 	<script src="js/vendor/modernizr-3.5.0.min.js"></script>
