--- a/pattaya.html
+++ b/pattaya.html
@@ -216,6 +216,15 @@
 						<p>Price Per Person Rs 7000/- ( if 10 to 12 Person ) </p>
 						<p>Price Per Person Rs 22500/- ( if 1 Single & Solo Trip ) </p>
 						<p>Pattaya Stay : 3 Mins to Walk in Street Indian Hotel With Pool & Spa</p>
+						<p class="text-white mt60">Room Tour Video<br>
+							<a href="https://youtu.be/I_bXSfI1KsE" target="_blank">Watch Video:
+								https://youtu.be/I_bXSfI1KsE</a>
+						</p>
+						<p class="text-white">Harish - Night life Tours Intro<br>
+							<a href="https://youtube.com/shorts/s6_ZiDBM-wg?si=HSAUSZrHzhlapYer" target="_blank"
+								class="mt60">Watch Video:
+								https://youtube.com/shorts/s6_ZiDBM-wg?si=HSAUSZrHzhlapYer</a>
+						</p>
 					</div>
 				</div>
 				<div class="col-lg-6">
@@ -228,6 +237,15 @@
 					<p><b class="text-white">Day 4 </b>Check out Pattaya - 11.30 keep luggage in Reception go
 						Lunch & Shopping back to Hotel by 15hrs Cab Start 15.30hrs Airport Drop - 18hrs ( Flight @ 21hrs
 						)</p>
+					<p class="text-white mt20">Night life Girls & Cost<br>
+						<a href="https://youtu.be/iDQ0bnyBNrA" target="_blank">Watch Video:
+							https://youtu.be/iDQ0bnyBNrA</a>
+					</p>
+					<p class="text-white">Harish - Personal Trip<br>
+						<a href="https://youtube.com/shorts/YfwGD_gyXhU?si=7j4-_dqDrSzv707X" target="_blank"
+							class="mt60">Watch Video:
+							https://youtube.com/shorts/YfwGD_gyXhU?si=7j4-_dqDrSzv707X</a>
+					</p>
 				</div>
 			</div>
 		</div>
@@ -288,7 +306,7 @@
 						<a class="navbar-brand  f-white-logo" href="#"> <img src="images/logo/icms.png"
 								alt="Logo" /></a> -->
 						<h2>Night Life Tours</h2>
-						<p>Since 2019, we have been curating the best nightlife experiences across Goa, Thailand, and
+						<p>Since 2014, we have been curating the best nightlife experiences across Goa, Thailand, and
 							Malaysia. From lively pubs and energetic discotheques to charming cafes and rejuvenating
 							massages, we bring you unforgettable moments. Book your night adventure with us and explore
 							the ultimate party destinations!</p>
@@ -301,8 +319,8 @@
 								<span><i class="fas fa-envelope"></i></span>
 								<p>Email <span> <a href="mailto:nightlifetourschennai@gmail.com"
 											target="_blank">nightlifetourschennai@gmail.com</a>|
-											<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
-											</a></span>
+										<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+										</a></span>
 								</p>
 							</li>
 							<li>
@@ -330,7 +348,8 @@
 					</div>
 
 					<p class=" border-bottom pb-2 text-justify pt-3  border-2">© 2025 All Rights Reserved By <b
-						class="text-primary"><a href="https://nightlifetours.in/" target="_blank">Night Life Tours</a></b></p>
+							class="text-primary"><a href="https://nightlifetours.in/" target="_blank">Night Life
+								Tours</a></b></p>
 				</div>
 			</div>
 		</div>
@@ -358,7 +377,9 @@
 			</div>
 		</div>
 	</div>
-
+	<a href="https://wa.me/+919600063175" class="fab-whatsapp" target="_blank">
+		<img src="images/icons/whatsapp.svg" alt="WhatsApp icon" />
+	</a>
 	<script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 	<script src="js/vendor/modernizr-3.5.0.min.js"></script>
 	<script src="js/jquery.min.js"></script>
