--- a/about-us.html
+++ b/about-us.html
@@ -264,7 +264,7 @@
 				<div class="col-lg-6">
 					<div class="common-heading text-l ">
 
-						<p class="text-justify">Since 2019, we have been your trusted guide to the most thrilling
+						<p class="text-justify">Since 2014, we have been your trusted guide to the most thrilling
 							nightlife experiences in Goa, Thailand, and Malaysia. Our mission is to take your nights to
 							the next level with exclusive access to the hottest pubs, electrifying nightclubs, stylish
 							cafés, and rejuvenating massage centers. Whether you're a party enthusiast, a social
@@ -385,7 +385,7 @@
 						<a class="navbar-brand  f-white-logo" href="#"> <img src="images/logo/icms.png"
 								alt="Logo" /></a> -->
 						<h2>Night Life Tours</h2>
-						<p>Since 2019, we have been curating the best nightlife experiences across Goa, Thailand, and
+						<p>Since 2014, we have been curating the best nightlife experiences across Goa, Thailand, and
 							Malaysia. From lively pubs and energetic discotheques to charming cafes and rejuvenating
 							massages, we bring you unforgettable moments. Book your night adventure with us and explore
 							the ultimate party destinations!</p>
@@ -455,7 +455,9 @@
 			</div>
 		</div>
 	</div>
-
+	<a href="https://wa.me/+919600063175" class="fab-whatsapp" target="_blank">
+		<img src="images/icons/whatsapp.svg" alt="WhatsApp icon" />
+	</a>
 	<script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 	<script src="js/vendor/modernizr-3.5.0.min.js"></script>
 	<script src="js/jquery.min.js"></script>
