--- a/bali.html
+++ b/bali.html
@@ -224,9 +224,14 @@
 						<p class="text-justify"> Per Person on - 18000 if 4 Person | 2 Room | 3Days Sight Seeing Big Car
 						</p>
 						<p class="text-justify"> Per Person on - 16000 if 6 Person | 3 Room | 3Days Sight Seeing Van</p>
-						<p>Room Tour Video 
-							<a href="https://youtu.be/JDrIla11Z4A" target="_blank">Watch Video</a>
-							<a href="https://youtu.be/byRqLkYwvzo" target="_blank">Watch Video</a>						</p>
+						<p class="text-white">Hotel Use 4 Night  Stay<br>
+							<a href="https://youtu.be/JDrIla11Z4A" target="_blank">Watch Video:
+								https://youtu.be/JDrIla11Z4A</a>
+						</p>
+						<p class="text-white">More Than 6 or 7 Night Stay <br>
+							<a href="https://youtu.be/byRqLkYwvzo" target="_blank" class="mt60">Watch Video:
+								https://youtu.be/byRqLkYwvzo</a>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -238,30 +243,32 @@
 						<h5>Sight Seeing in Bali - 3 Days with Only Entrance & Ride Extra</h5>
 						<p class="text-justify"><b class="text-white">Visa on Arrival - </b>32USD or 5L | Our Company
 							Give all Private Sight Seeing</p>
-						<p class="text-justify"><b class="text-white">Day 1: </b>  Pick Up Airport 16hrs - ( Time permits Only Beach & Spa walkable )</p>
-						<p class="text-justify"><b class="text-white">Day 2: </b> 
-								<p>After Break fast - Full Day Sight Seeing With Entrance - Ride Pay & Use 
-									( 9am to 18Hrs - Same Driver All Days )</p>
-								<p>Water sport ( Ride cost by Client On own - 10 to 12Hrs )</p>
-								<p>Pandawa beach - Film Shooting Spot ( 13 to 14Hrs )</p>
-								<p>Uluwatu Temple ( Sea View Ocean Top - 15 to 16Hrs )</p>
-								<p>Tanah lot - Sea Shore Temple ( 17 to 19Hrs )</p>
-							</ul>
+						<p class="text-justify"><b class="text-white">Day 1: </b> Pick Up Airport 16hrs - ( Time permits
+							Only Beach & Spa walkable )</p>
+						<p class="text-justify"><b class="text-white">Day 2: </b>
+						<p>After Break fast - Full Day Sight Seeing With Entrance - Ride Pay & Use
+							( 9am to 18Hrs - Same Driver All Days )</p>
+						<p>Water sport ( Ride cost by Client On own - 10 to 12Hrs )</p>
+						<p>Pandawa beach - Film Shooting Spot ( 13 to 14Hrs )</p>
+						<p>Uluwatu Temple ( Sea View Ocean Top - 15 to 16Hrs )</p>
+						<p>Tanah lot - Sea Shore Temple ( 17 to 19Hrs )</p>
+						</ul>
 						</p>
 						<p class="text-justify"><b class="text-white">Day 3: </b>
-							<p>After Break fast - Full Day Sight Seeing </p>
-							<p>Tegenungan waterfall - ( With Entrance - 11.30 to 13Hrs )</p>
-							<p>Kintamani volcano - ( With Entrance 14Hrs to 15Hrs  )</p>
-							<p>Bali Swing - ( With Entrance 16Hrs to 17Hrs )</p>
-							<p>Ubud Palace & Market Shopping - ( With Entrance 18 to 19Hrs )</p>
+						<p>After Break fast - Full Day Sight Seeing </p>
+						<p>Tegenungan waterfall - ( With Entrance - 11.30 to 13Hrs )</p>
+						<p>Kintamani volcano - ( With Entrance 14Hrs to 15Hrs )</p>
+						<p>Bali Swing - ( With Entrance 16Hrs to 17Hrs )</p>
+						<p>Ubud Palace & Market Shopping - ( With Entrance 18 to 19Hrs )</p>
 						</p>
-						<p class="text-justify"><b class="text-white">Day 4: </b> 
-							<p>After Break fast - Full Day Sight Seeing</p>
-							<p>River Rafting Area Only ( Ride Pay & Use ) cost by customers if in Need </p>
-							<p>Bali Bird Park - ( U like Pay Entrance & use  )</p>
-							<p>Ulun Danu Beratan Temple - ( With Entrance )</p>
+						<p class="text-justify"><b class="text-white">Day 4: </b>
+						<p>After Break fast - Full Day Sight Seeing</p>
+						<p>River Rafting Area Only ( Ride Pay & Use ) cost by customers if in Need </p>
+						<p>Bali Bird Park - ( U like Pay Entrance & use )</p>
+						<p>Ulun Danu Beratan Temple - ( With Entrance )</p>
 						</p>
-						<p class="text-justify"><b class="text-white">Day 5: </b> Pick Up hotel - Shopping Krishna Market & Drop to Airport ( Depend on Flight Timing )</p>
+						<p class="text-justify"><b class="text-white">Day 5: </b> Pick Up hotel - Shopping Krishna
+							Market & Drop to Airport ( Depend on Flight Timing )</p>
 					</div>
 				</div>
 				<div class="col-lg-4">
@@ -286,7 +293,7 @@
 						<a class="navbar-brand  f-white-logo" href="#"> <img src="images/logo/icms.png"
 								alt="Logo" /></a> -->
 						<h2>Night Life Tours</h2>
-						<p>Since 2019, we have been curating the best nightlife experiences across Goa, Thailand, and
+						<p>Since 2014, we have been curating the best nightlife experiences across Goa, Thailand, and
 							Malaysia. From lively pubs and energetic discotheques to charming cafes and rejuvenating
 							massages, we bring you unforgettable moments. Book your night adventure with us and explore
 							the ultimate party destinations!</p>
@@ -299,8 +306,8 @@
 								<span><i class="fas fa-envelope"></i></span>
 								<p>Email <span> <a href="mailto:nightlifetourschennai@gmail.com"
 											target="_blank">nightlifetourschennai@gmail.com</a>|
-											<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
-											</a></span>
+										<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+										</a></span>
 								</p>
 							</li>
 							<li>
@@ -357,7 +364,9 @@
 			</div>
 		</div>
 	</div>
-
+	<a href="https://wa.me/+919600063175" class="fab-whatsapp" target="_blank">
+		<img src="images/icons/whatsapp.svg" alt="WhatsApp icon" />
+	</a>
 
 	<script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 	<script src="js/vendor/modernizr-3.5.0.min.js"></script>
