--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div data-swiper-parallax="300" class="slide-title">
-										<h5 class="text-white">Enjoy Safe & Secure +18 Trip With Night life tours with
+										<h5 class="text-white">Enjoy Safe & Secure +18 Trip With Night life tours without
 											Any Scam ( Bangkok | Pattaya | Phuket | Bali | Malaysia | Vietnam | Cambodia
 											| Dubai | Singapore | Srilanka )</h5>
 									</div>
@@ -359,7 +359,7 @@
 				<div class="col-lg-6">
 					<div class="common-heading text-l">
 						<h2 class="mb30"><span class="text-second text-bold">NIGHT LIFE TOURS </span></h2>
-						<p class="text-justify">Since 2019, we have been your trusted guide to the most thrilling
+						<p class="text-justify">Since 2014, we have been your trusted guide to the most thrilling
 							nightlife experiences in Goa, Thailand, and Malaysia. Our mission is to take your nights to
 							the next level with exclusive access to the hottest pubs, electrifying nightclubs, stylish
 							cafés, and rejuvenating massage centers. Whether you're a party enthusiast, a social
@@ -435,9 +435,6 @@
 			</div>
 			<div class="row mt30">
 				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
-					<img src="img/nightlife/tourist/img (1).jpeg" alt="img">
-				</div>
-				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
 					<img src="img/nightlife/tourist/img (2).jpeg" alt="img">
 				</div>
 				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
@@ -482,7 +479,9 @@
 				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
 					<img src="img/nightlife/tourist/img (16).jpeg" alt="img">
 				</div>
-				
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/gallery_photos/img (9).jpeg" alt="img">
+				</div>
 			</div>
 			<div class="row justify-content-center">
 				<div class="col-lg-8">
@@ -514,6 +513,9 @@
 				</div>
 				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
 					<img src="img/nightlife/img-5.jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
+					<img src="img/nightlife/gallery_photos/img (7).jpeg" alt="img">
 				</div>
 			</div>
 		</div>
@@ -613,7 +615,7 @@
 						<a class="navbar-brand  f-white-logo" href="#"> <img src="images/logo/icms.png"
 								alt="Logo" /></a> -->
 						<h2>Night Life Tours</h2>
-						<p>Since 2019, we have been curating the best nightlife experiences across Goa, Thailand, and
+						<p>Since 2014, we have been curating the best nightlife experiences across Goa, Thailand, and
 							Malaysia. From lively pubs and energetic discotheques to charming cafes and rejuvenating
 							massages, we bring you unforgettable moments. Book your night adventure with us and explore
 							the ultimate party destinations!</p>
@@ -704,7 +706,9 @@
 			</div>
 		</div>
 	</div> -->
-
+	<a href="https://wa.me/+919600063175" class="fab-whatsapp" target="_blank">
+		<img src="images/icons/whatsapp.svg" alt="WhatsApp icon" />
+	</a>
 
 	<script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 	<script src="js/vendor/modernizr-3.5.0.min.js"></script>
